--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello HTML</title>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="hello.css">
 </head>
 <body>
-    <h1>Hello World</h1>
+    <div class="blur">
+        <h1 class="testo">Hello World</h1>
+    </div>
 </body>
 </html>
